Modificación del mensaje para Jony

--- a/Links/index.html
+++ b/Links/index.html
@@ -38,7 +38,7 @@
 
 <body>
     <main class="content">
-<!-- Nota para Jony: Holis! Ya termine mi primera landing page :) y todo bien!! Me costo un poco el tema de los tamaños y conseguir más info en internet sobre los metas  -->
+<!-- Nota para Jony: Holis! Ya termine mi primera landing page :) y todo bien!! Solo me costo un poco el tema de los tamaños -->
     <header>
         <img src="../Links/img/aloha.jpeg" alt="">
         <h1>@aidinPudin</h1>
