cambios en el html

--- a/Links/index.html
+++ b/Links/index.html
@@ -8,24 +8,25 @@
 <!--  Meta Tags -->
     <title>Links de Aidin Pudin</title>
     <meta name="title" content="Los links de Aidin Pudin" />
-    <meta name="description" content="Conoce un poco mas de Aidin Pudin a traves de estos links" />
-    <meta name="keywords" content="website, AidinPudin" />
+    <meta name="description" content="Conoce un poco mas de Aidin Pudin a través de estos links" />
+    <meta name="keywords" content="website, links" />
     <meta name="author" content="Soy Aidin Rodriguez alumna de SummerHack :) | mail: rodriguezaidin@gmail.com" />
     <meta name="copyright" content="Aidin Rodriguez 2023" />
     <meta name="place" content="Buenos Aires, Argentina" />
+    <link rel="icon" href="img/aloha.jpg" type="img/jpg">
 
 <!-- Open Graph / Facebook -->
     <meta property="og:title" content="Los links de Aidin Pudin" />
-    <meta property="og:description" content="Conoce un poco mas de Aidin Pudin a traves de estos links" />
+    <meta property="og:description" content="Conoce un poco mas de Aidin Pudin a través de estos links" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://aidinpudin.github.io/Links/img/aloha.jpeg" /> 
+    <meta property="og:image" content="https://aidinpudin.github.io/Links/img/aloha.jpg" /> 
     <meta property="og:url" content="https://aidinpudin.github.io/Links/" /> 
 
 <!-- Twitter -->
     <meta property="twitter:title" content="Los links de Aidin Pudin" />
-    <meta property="twitter:description" content="Conoce un poco mas de Aidin Pudin a traves de estos links" />
+    <meta property="twitter:description" content="Conoce un poco mas de Aidin Pudin a través de estos links" />
     <meta property="twitter:type" content="website" />
-    <meta property="twitter:image" content="https://aidinpudin.github.io/Links/img/aloha.jpeg" /> 
+    <meta property="twitter:image" content="https://aidinpudin.github.io/Links/img/aloha.jpg" /> 
     <meta property="twitter:url" content="https://aidinpudin.github.io/Links/" /> 
     <meta property="twitter:card" content="summary_large_image" />
 
@@ -34,28 +35,29 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;700&family=Roboto+Condensed:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+
+<!-- Nota para Jony: Holis! Ya termine mi primera landing page :) y todo bien!! Solo me costo un poco el tema de los tamaños -->
 </head>
 
 <body>
     <main class="content">
-<!-- Nota para Jony: Holis! Ya termine mi primera landing page :) y todo bien!! Solo me costo un poco el tema de los tamaños -->
     <header>
-        <img src="../Links/img/aloha.jpeg" alt="">
+        <img src="../Links/img/aloha.jpg" alt="">
         <h1>@aidinPudin</h1>
     </header>
 
 <!-- Links RRSS-->
     <nav>
-        <a href="https://www.linkedin.com/in/aidinrodriguez/">
+        <a href="https://www.linkedin.com/in/aidinrodriguez/" target="_blank">
             <img src="img/linkedin.png" alt="linkedin"> 
         </a>
-        <a href="https://www.instagram.com/aidinpudin/?hl=es">
+        <a href="https://www.instagram.com/aidinpudin/?hl=es" target="_blank">
             <img src="img/instagram.png" alt="instagram"> 
         </a>
-        <a href="https://github.com/aidinpudin">
+        <a href="https://github.com/aidinpudin" target="_blank">
             <img src="img/github.png" alt="github"> 
         </a>
-        <a href="mailto:rodriguezaidin@gmail.com">
+        <a href="mailto:rodriguezaidin@gmail.com" target="_blank">
             <img src="img/email.png" alt="email">
         </a>
     </nav>
@@ -73,13 +75,13 @@
 <!-- Botones --> 
         <ul>
             <li>
-                <a href="https://www.canva.com/design/DAFCfzEETK0/7W6k5r01Nx_N17j5K89S5g/view?utm_content=DAFCfzEETK0&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Mi proyecto de app</a>
+                <a href="https://www.canva.com/design/DAFCfzEETK0/7W6k5r01Nx_N17j5K89S5g/view?utm_content=DAFCfzEETK0&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank">Mi proyecto app</a>
             </li>
             <li>
-                <a href="https://ar.pinterest.com/aidinrodriguezg/aidinpudin/">Mi Pinterest</a>
+                <a href="https://ar.pinterest.com/aidinrodriguezg/aidinpudin/" target="_blank">Mi Pinterest</a>
             </li>
             <li>
-                <a href="https://www.canva.com/design/DAFY-6SR0l0/pV7ho4gy6Nr9GuRy1Dvcfw/view?utm_content=DAFY-6SR0l0&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Cursos y Libros</a>
+                <a href="https://www.canva.com/design/DAFY-6SR0l0/pV7ho4gy6Nr9GuRy1Dvcfw/view?utm_content=DAFY-6SR0l0&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank">Cursos y Libros</a>
             </li>
         </ul>
     </section>
