intento de pagina

--- a/Links/index.html
+++ b/Links/index.html
@@ -67,7 +67,6 @@
         <div class="descripcion"> 
             <p>
                 Hola, soy Aidin y muchos me llaman Pudin, acá te cuento un poco sobre mi. <br><br>
-                Mi pasión es desarrollar ideas e innovar, me gusta combinar la creatividad y el pensamiento estratégico como diferenciales en la gestión y desarrollo de proyectos. <br><br>
                 Soy profesional del Marketing y tengo más de 12 años de experiencia laboral en las áreas de Marketing, Trade Marketing y Comercial; especializándome desde hace más de 3 años en el análisis de datos y gestión de proyectos, actualmente me encuentro estudiando desarrollo Frontend. <br>
             </p>
         </div>
@@ -75,7 +74,7 @@
 <!-- Botones --> 
         <ul>
             <li>
-                <a href="https://www.canva.com/design/DAFCfzEETK0/7W6k5r01Nx_N17j5K89S5g/view?utm_content=DAFCfzEETK0&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank">Mi proyecto app</a>
+                <a href="https://aidinpudin.github.io/google/" target="_blank">Reto Google</a>
             </li>
             <li>
                 <a href="https://ar.pinterest.com/aidinrodriguezg/aidinpudin/" target="_blank">Mi Pinterest</a>
