--- a/Links/index.html
+++ b/Links/index.html
@@ -74,13 +74,13 @@
 <!-- Botones --> 
         <ul>
             <li>
-                <a href="https://aidinpudin.github.io/google/" target="_blank">Reto Google</a>
+                <a href="https://aidinpudin.github.io/google/" target="_blank">Clon Google</a>
             </li>
             <li>
-                <a href="https://ar.pinterest.com/aidinrodriguezg/aidinpudin/" target="_blank">Mi Pinterest</a>
+                <a href="#" target="_blank">To do List</a>
             </li>
             <li>
-                <a href="https://www.canva.com/design/DAFY-6SR0l0/pV7ho4gy6Nr9GuRy1Dvcfw/view?utm_content=DAFY-6SR0l0&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank">Cursos y Libros</a>
+                <a href="#" target="_blank">Proyectos</a>
             </li>
         </ul>
     </section>
